--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -523,6 +523,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 1rem;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mb-7 {
   margin-bottom: 1.75rem;
 }
